fixed parse errors and added text align to 90em media query

--- a/css/main.css
+++ b/css/main.css
@@ -280,3 +280,8 @@ nav li {
   }
 
 @media only screen and (min-width: 90em) {
+
+  p {
+    text-align: center;
+
+    }
